layers/k3s/usr/local/k8s/namespace.k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${K8S_NAMESPACE}
  labels:
    name: ${K8S_NAMESPACE}
