layers/k3s/usr/local/k8s/networkpolicy.k8s.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "treafik"
  namespace: ${K8S_NAMESPACE}
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  podSelector:
    matchLabels:
      io.kompose.network/${K8S_NAMESPACE}: "true"
